--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ header{
     height: 500px;
     position: relative;
     margin-top: 80px;
-    background-image: url(/img/img1.jpg);
+    background: url(../img/img1.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -138,9 +138,21 @@ header{
     font-style: 300px;
 }
 
+.container-fotos{
+    display: flex;
+}
 .container-profile-mary{
     width: 200px;
     height: 200px;
-    background-image: url(/img/img2.jpg);
+    background: url(../img/img2.jpg);
     border-radius: 50%;
+    background-size: cover;
+}
+
+.container-profile-luis{
+    width: 200px;
+    height: 200px;
+    background: url(../img/img3.jpeg);
+    border-radius: 50%;
+    background-size:cover;
 }
